# SixPack

./: .gitignore  README.md  diagnose_devices.py  eim_config.toml  instrument_mapping.json  monitor.py  monitor_28byj.py  requirements.txt  rpi_hub.py  start.sh  stepper_28byj.py  stop.sh  web_server.py
esp-panel/: .env.example  .gitignore  BUILD_INSTRUMENTS.md  CMakeLists.txt  README.md  VSI_REFERENCE.md  sdkconfig.defaults.esp32c3.sample
esp-panel/main/: CMakeLists.txt  Kconfig.projbuild.sample  airspeed.c  altimeter.c  attitude.c  config.h  gyrocompass.c  inputs.c  turn.c  vertspeed.c
panel-sim/: commands  docker-compose.yml
panel-sim/esp-sim/: Dockerfile
panel-sim/xplane-sim/: Dockerfile
templates/: index.html
